--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -136,7 +136,7 @@ header {
     hr {
       width: 60%;
       margin: 18px auto 24px auto;
-      border-bottom: solid 1px rgba($aqua, 0.3);
+      border-bottom: solid 1px rgba($aqua, 0.9);
     }
     h1 {
       font: 90px/1.1em "montserrat-bold", sans-serif;
@@ -363,10 +363,11 @@ ul#nav {
 
   p {
     line-height: 30px;
+    font-size: 1.2em;
     color: #cdcdcd;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
-    &.large {
-      font-size: 1.2em;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    &.small {
+      font-size: 1em;
     }
   }
 
@@ -386,11 +387,12 @@ ul#nav {
     border: 6px solid darken($purple, 5%);
     box-shadow: 0 0 0 12px $purple;
   }
-  .contact-details a {
+  a {
     padding: 0px 5px 3px;
     color: white;
     border-bottom: 1px dotted $aqua;
     line-height: 20px;
+    text-shadow: none;
     transition: all 0.3s ease-in-out;
     &:nth-of-type(2) {
       margin-left: 10px;
@@ -407,12 +409,25 @@ ul#nav {
     padding: 20px;
 
     .button {
+      border: 2px solid $aqua;
       background-color: darken($purple, 6%);
       color: white;
+      background-image: linear-gradient(
+        to right,
+        $aqua,
+        $aqua 51%,
+        $purple 49%
+      );
+      background-size: 200% 100%;
+      background-position: 100%;
+      cursor: pointer;
+      padding: 15px 30px;
+      border: 2px solid $aqua;
       transition: all 0.3s cubic-bezier(0, 0, 0.23, 1);
 
       &:hover {
-        color: $aqua;
+        background-position: 0%;
+        color: $purple;
       }
       svg {
         margin-right: 7px;
@@ -430,12 +445,6 @@ ul#nav {
 #about a:visited {
   color: #fff;
   font: 1em/1.8em "montserrat-semiBold", sans-serif;
-  -webkit-background-clip: text;
-  transition: all 0.3s cubic-bezier(0, 0, 0.23, 1);
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(to right, $aqua, $aqua 50%, #fff 50%);
-  background-size: 200% 100%;
-  background-position: 100%;
 }
 #about a:hover,
 #about a:focus {
