--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 a span {
   padding-right: 3px;
@@ -902,6 +903,7 @@ footer .social li:first-child {
   #portfolio {
     .portfolio-item {
       .item-wrap {
+        border-radius: 6px;
         .link-icon {
           opacity: 1;
         }
@@ -922,6 +924,9 @@ footer .social li:first-child {
   }
   .project {
     margin: 15px 5% 45px;
+    .popup-modal {
+      left: 0;
+    }
   }
 
   //// Copyright
@@ -1005,7 +1010,11 @@ footer .social li:first-child {
 
     ul#nav {
       a {
-        padding: 32px 16px 0 !important;
+        padding: 32px 15px 0 !important;
+      }
+
+      .about span {
+        left: 33%;
       }
     }
   }
