--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -482,7 +482,9 @@ ul#nav {
       border-radius: 2px;
 
       &:hover {
-        transform: scale(1.08) rotate(1deg); //TODO Use javascript to add a random number to the rotate https://css-tricks.com/random-numbers-css/
+        transform: scale(
+          1.08
+        ); //TODO Use javascript to add a random number to the rotate https://css-tricks.com/random-numbers-css/
         -webkit-box-shadow: 0px 14px 13px -8px rgba(38, 35, 53, 0.6),
           0px 35px 15px 5px rgba(38, 35, 53, 0);
         box-shadow: 0px 14px 13px -8px rgba(38, 35, 53, 0.6),
@@ -510,15 +512,12 @@ ul#nav {
         position: absolute;
         left: 0;
         top: 0;
-        width: 102%;
-        height: 102%;
-
+        width: 200%;
+        height: 200%;
         opacity: 0;
         -moz-opacity: 0;
-
-        -webkit-transition: opacity 0.2s ease-in-out;
-        transition: opacity 0.2s ease-in-out;
-
+        -webkit-transition: opacity 0.15s ease-in-out;
+        transition: opacity 0.15s ease-in-out;
         background: rgba(darken($purple, 6%), 0.85);
       }
       .link-icon {
@@ -534,8 +533,8 @@ ul#nav {
         -moz-opacity: 0;
         filter: alpha(opacity=0);
 
-        -webkit-transition: opacity 0.3s ease-in-out;
-        transition: opacity 0.3s ease-in-out;
+        -webkit-transition: opacity 0.2s ease-in-out;
+        transition: opacity 0.2s ease-in-out;
 
         position: absolute;
         top: 50%;
@@ -561,7 +560,7 @@ ul#nav {
   overflow: hidden;
   top: -50px;
   padding-bottom: 45px;
-  box-shadow: 0 0 0 2000px rgba(darken($purple, 12%), 0.8),
+  box-shadow: 0 0 0 2000px rgba(darken($purple, 6%), 0.85),
     0 30px 60px rgba(0, 0, 0, 0.6);
   position: fixed;
   margin: 0 auto;
