--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,8 @@ $outside-link: $aqua;
 @import "forms";
 @import "grid";
 
+// TODO We gonna clean this thing up
+
 // TODO Gatsby background image
 
 // TODO Add gifs in place of the images using react-gif-player
