--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,7 +24,7 @@ $outside-link: $aqua;
 
 // TODO Add gifs in place of the images using react-gif-player. NEED TO LEARN HOW TO LOAD ON DEMAND FOR THIS. LOAD TIMES WILL BE ATTROCIOUS
 
-// TODO Add descriptions to the projects
+// TODO Add descriptions to the projects and look over any that you have added already
 
 // TODO Make the modals look like a mini browser window
 
