--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -486,9 +486,16 @@ ul#nav {
 			max-width: 100%;
 
 			h5 {
-				font: 12px/21px "Montserrat", sans-serif;
+				font: 13px/21px "Montserrat", sans-serif;
 				font-weight: 800;
+				margin-bottom: 0;
 				color: #fff;
+			}
+			h6 {
+				font-weight: 400;
+				font-size: 10px;
+				color: $aqua;
+				margin: 0 0 20px;
 			}
 			p {
 				font: 11px/18px "Montserrat", sans-serif;
