Minor css, fixed bottom scroll to top

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,7 +26,7 @@ $outside-link: $aqua;
 
 // TODO Make the modals look like a mini browser window
 
-// TODO Smooth scroll to links
+// TODO Fix the render method issue with the projects.js
 
 /*  1. Clearing
     (http://nicolasgallagher.com/micro-clearfix-hack/ */
